1999-11-23  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/easy-mmode.el: Changed maintainer.
	(easy-mmode-define-toggle): New BODY arg; Never append `-mode';
	  Use defcustom for the hooks; Improve the auto-generated docstrings.
	(easy-mmode-define-minor-mode): Renamed `define-minor-mode'.
	(define-minor-mode): Add BODY arg; Only declare the keymap if
	  provided; Improve the auto-generated docstrings.

1999-11-22  Gerd Moellmann  <gerd@gnu.org>

	* textmodes/text-mode.el (text-mode): Contruct paragraph-start so
	that the leading `^' is at the start.  This is necessary because
	paragraphs.el tries to remove anchors, but can find them only if
	they are the first character.

	* progmodes/antlr-mode.el: New file.

	* calendar/calendar.el: Fix autoload for
	calendar-absolute-from-astro.  Add autoload for
	calendar-print-astro-day-number.

1999-11-21  Anders Lindgren  <andersl@andersl.com>

	* follow.el: Use modern backquote syntax.  Minor comment update.

1999-11-21  Gerd Moellmann  <gerd@gnu.org>

	* simple.el (with-syntax-table): Don't switch buffers.

	* emacs-lisp/edebug.el, emacs-lisp/cust-print.el,
	progmodes/hideif.el: Use new backquote syntax.

1999-11-21  Ken Manheimer  <klm@python.org>

	* icomplete.el (icomplete-completions): Use an explicit variable
	`icomplete-prospects-length', obviating the need to use an
	apparently faulty throw/catch arrangement.
	
1999-11-21  Eli Zaretskii  <eliz@is.elta.co.il>

	* term/internal.el (IT-display-table-setup): Don't overstep
	character code 255.

1999-11-20  Kenichi Handa  <handa@mule.m17n.org>

	* ps-mule.el (ps-mule-font-info-database-bdf): Default BDF font
	for the charset chinese-sisheng is 7bit encoding, not 8bit.

1999-11-19  Stefan Monnier  <monnier@cs.yale.edu>

	* scroll-bar.el (scroll-bar-toolkit-scroll): Add handling of the 
	`ratio' event for Xaw and Xaw3d(without arrows) scrollbars.

	* files.el (auto-mode-alist): Add patterns for diff-mode.
